add favicon 28nov 19:47

--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ footer{
     background-color:white;
     display: flex;
    align-items: center;
+   justify-content: center;
    box-shadow: -1px -2px 1px rgba(0, 0, 0, 0.322);
 }
 
